--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -431,7 +431,7 @@ img{
 }
 .skills_bar, .skills_percentage{
     height: 5px;
-    border-radius: 00.25rem;
+    border-radius: 0.25rem;
 }
 .skills_bar{
     background-color: var(--first-color-lighter);
@@ -586,7 +586,7 @@ img{
         order: 1;
         justify-self: center;
     }
-    .about_container,.skills_container, .portfolio_content{
+    .about_container, .portfolio_content{
         grid-template-columns: repeat(2, 1fr);
     }
 }
@@ -628,7 +628,7 @@ img{
         margin: 0;
     }
     .home_container{
-        row-gap: 5rem;
+        row-gap: 2rem;
     }
     .home_content{
         padding-top: 5.5rem;
